@@ -1,8 +1,9 @@
 == Changelog
 
 === 4.6 (planned to 07.07.2017)
-* #529 Cannot find capabilities with browserName=ie when grid hub url specified in -Dremote
+* #529 Cannot find capabilities with browserName=ie when grid hub url specified in -Dremote    -- thanks to @BorisOsipov
 * #551 Method `$.setValue()` should not fail if it could not trigger change event (for whatever reason).
+* #528 - Wrong ElementNotFound exception message  -- thanks to @BorisOsipov
 
 === 4.5.1 (released 27.06.2017)
 * #484 added method $.getSearchCriteria()
